syntax = "proto3";

package users;

service UserService {
  rpc FindOneOrCreate (ProviderProfile) returns (User);
  rpc GetPublicKey (User) returns (PublicKey);
}

message ProviderProfile {
  string provider = 1;
  string id = 2;
  string username = 3;
}

message User {
  string id = 1;
}

message PublicKey {
  string public_key = 1;
}
